# CoordinatesProcessingTest2

./: .gitignore  CMakeLists.txt  coordinates.txt  readme.md  vcpkg.json
src/: main.cpp
texts/: text1.txt  text2.txt
